<resources>
    <string name="app_name">My Application</string>
    <string name="project_name">抛石驳船自动定位控制系统</string>
    <!--登陆界面  -->
    <string name="login_label">登陆系统</string>
    <string name="user_name_label">用   户 :</string>
    <string name="user_name_hint">在此输入用户名</string>
    <string name="password_label">密    码 :</string>
    <string name="password_hint">在此输入密码</string>

    <string name="save_id_box">记住账号</string>
    <string name="register_button">注册账号</string>
    <string name="login_button">登陆</string>

    <string name="lock_screen_button">锁屏</string>
    <string name="emergency_button">急停</string>

    <!-- 注册界面-->
    <string name="register_label">注册新用户</string>
    <string name="duplicated_password_label">确认密码 :</string>

    <string name="input_user_name_hint">请输入一个用户名</string>
    <string name="input_password_hint">请输入登录密码</string>
    <string name="input_password_again_hint">再次输入密码</string>

    <string name="inner_register_button">注册</string>

    <string name="username_filter">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!--主界面  -->

    <!--数据显示模块  -->
    <string name="control_area_label">控制区域</string>
    <string name="anchor1_label">A1 </string>
    <string name="anchor2_label">A2 </string>
    <string name="anchor3_label">A3 </string>
    <string name="anchor4_label">A4 </string>

    <string name="anchor_gps_longitude_label">经度: </string>
    <string name="anchor_gps_latitude_label">纬度: </string>

    <string name="display_area_label">状态显示</string>

    <string name="boat_gps_longitude_label">经度: </string>
    <string name="boat_gps_latitude_label">纬度: </string>

</resources>
