<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/colorMapLayout">
    <!--系统名称  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/project_name"
        android:textSize="30dp"
        android:paddingBottom="60dp"/>

    <!-- 登陆框 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login"
        android:layout_gravity="center"
        android:orientation="vertical">
        <!-- "登陆系统" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:layout_gravity="center"
            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:paddingTop="20dp">
                <!-- "用户名" label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_label"/>
                <!-- 用户名输入框 -->
                <EditText
                    android:id="@+id/log_in_username_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name_hint"
                    android:ems="7"
                    android:focusable="true"
                    android:focusableInTouchMode="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <!-- 密码 label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_label"/>
                <!-- 密码 输入框 -->
                <EditText
                    android:id="@+id/log_in_password_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:ems="7"
                    android:focusable="true"
                    android:focusableInTouchMode="true"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingTop="15dp">
            <!-- "记住账号" -->
            <CheckBox
                android:id="@+id/save_id_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_id_box"
                android:paddingRight="30dp"/>
            <!-- 注册账号-->
            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button"/>
        </LinearLayout>
        <!-- 登陆Button -->
        <Button
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:orientation="vertical">
        <!-- 锁屏Button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/lock_screen_button"/>
        <!-- 急停Button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/emergency_button"/>
    </LinearLayout>
</LinearLayout>