<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorMapLayout">
    <!-- 标题 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:layout_gravity="center"
        android:textSize="30dp"/>
    <!-- 将主界面分为两个大块 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="467dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="20dp">
        <!--大块1 控制区域显示-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- 控制模块标题-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/control_area_label"
                android:textSize="20dp" />

            <RelativeLayout
                android:layout_width="600dp"
                android:layout_height="350dp"
                android:background="@drawable/background_main">
                <!-- 左上 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal">
                    <!-- A1 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anchor1_label" />
                    <!-- 经纬度 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <!-- 经度 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/anchor_gps_longitude_label" />
                            <TextView
                                android:id="@+id/anchor1_longitude"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <!-- 纬度 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/anchor_gps_latitude_label" />
                            <TextView
                                android:id="@+id/anchor1_latitude"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <!-- 右上 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">
                    <!-- A2 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anchor2_label" />
                    <!-- 经纬度 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <!-- 经度 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/anchor_gps_longitude_label" />
                            <TextView
                                android:id="@+id/anchor2_longitude"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <!-- 纬度 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/anchor_gps_latitude_label" />
                            <TextView
                                android:id="@+id/anchor2_latitude"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <!-- 右下 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">
                    <!-- A3 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anchor3_label" />
                    <!-- 经纬度 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <!-- 经度 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/anchor_gps_longitude_label" />
                            <TextView
                                android:id="@+id/anchor3_longitude"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <!-- 纬度 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/anchor_gps_latitude_label" />
                            <TextView
                                android:id="@+id/anchor3_latitude"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <!-- 左下 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">
                    <!-- A4 -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anchor4_label" />
                    <!-- 经纬度 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <!-- 经度 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/anchor_gps_longitude_label" />
                            <TextView
                                android:id="@+id/anchor4_longitude"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <!-- 纬度 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/anchor_gps_latitude_label" />
                            <TextView
                                android:id="@+id/anchor4_latitude"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <!-- 中间的图 (画布)-->
                <RelativeLayout
                    android:id="@+id/paint_layout"
                    android:layout_width="440dp"
                    android:layout_height="250dp"
                    android:layout_centerInParent="true">
                    <!-- 整个船体 -->
                    <com.example.yy.ui.BoatView
                        android:id="@+id/my_boat_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">
                    </com.example.yy.ui.BoatView>
                    <!-- 4 个anchor-->
                    <!-- 左上-->
                    <ImageView
                        android:id="@+id/anchor1"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/circle_icon" />
                    <!-- 右上-->
                    <ImageView
                        android:id="@+id/anchor2"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/circle_icon" />
                    <!--左下-->
                    <ImageView
                        android:id="@+id/anchor4"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:src="@mipmap/circle_icon" />
                    <!--右下-->
                    <ImageView
                        android:id="@+id/anchor3"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:src="@mipmap/circle_icon" />
                    <com.example.yy.ui.PaintBoard
                        android:id="@+id/my_paint_board"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>

        <!-- 大块2 状态显示区域 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_area_label"
                android:textSize="20dp"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_main"
                android:orientation="vertical">
                <!-- GPS 显示-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/gps_logo"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="10dp">
                        <!-- 经度 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/boat_gps_longitude_label"
                                android:textSize="18dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123"
                                android:textSize="18dp"/>
                        </LinearLayout>
                        <!-- 纬度 -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/boat_gps_latitude_label"
                                android:textSize="18dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="123"
                                android:textSize="18dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <!-- 角度 显示-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/rotation"/>
                    <TextView
                        android:id="@+id/boat_rotation_degree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="左偏5°"
                        android:textSize="18dp"
                        android:paddingLeft="10dp"/>
                </LinearLayout>
                <!-- 张力 显示-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/rope"/>
                    <TextView
                        android:id="@+id/rope_tension_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="张力正常"
                        android:textSize="18dp"
                        android:paddingLeft="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>